--- a/css/tool-cool-slider.css
+++ b/css/tool-cool-slider.css
@@ -8,3 +8,13 @@
 	-webkit-clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
 	clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
 }
+.tooltips.is-after > .tooltip {
+	z-index: 999;
+}
+.sliderHolder {
+	height: 150px;
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
