--- a/css/tool-cool-slider.css
+++ b/css/tool-cool-slider.css
@@ -9,7 +9,7 @@
 	clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
 }
 .tooltips.is-after > .tooltip {
-	z-index: 999;
+	z-index: 999!important;
 }
 .sliderHolder {
 	height: 150px;
